--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <table class="table table-hover" style="margin: 1em">
     {% for account in accounts %}
     <tr onclick="window.location='/accounts/{{account.id_}}'">
-        <td>{{account.id_}}</td>
+        <td><a href="{% url 'account_detail' pk=account.id_ %}">{{account.id_}}</a></td>
         <td
             {% if account.balance >= max_balance %}
                 class = "table-success"
@@ -19,7 +19,7 @@
         <td>{{account.currency}}</td>
     </tr>
     {% endfor %}
-</table>
+<table class="table table-hover" style="margin: 1em">
 <h3>Открыть новый счёт</h3>
 <form action="" method="POST">
 <!--    {% csrf_token %}-->
